--- a/afs/templates/views/components/reports/instrument.htm
+++ b/afs/templates/views/components/reports/instrument.htm
@@ -77,7 +77,7 @@
                     params: {
                         data: resource,
                         cards: substanceCards
-                        
+
                     }
                 }"></div>
             </div>
@@ -116,7 +116,16 @@
                         data: sethoodData,
                     }
                 }"></div>
-            </div>
+            </div>           
+            <!-- JSON Tab -->
+           <div class="afs-report-page" data-bind="if: activeSection() === 'json'">
+               <div data-bind="component: {
+                   name: 'views/components/reports/scenes/json',
+                   params: {
+                       resourceInstanceId: reportMetadata().resourceinstanceid,
+                   }
+               }"></div>
+           </div>
         </div>
     </div>
 
