--- a/afs/templates/views/components/reports/observation.htm
+++ b/afs/templates/views/components/reports/observation.htm
@@ -93,7 +93,16 @@
                         data: parameterData,
                     }
                 }"></div>
-            </div>
+            </div>  
+            <!-- JSON Tab -->
+           <div class="afs-report-page" data-bind="if: activeSection() === 'json'">
+               <div data-bind="component: {
+                   name: 'views/components/reports/scenes/json',
+                   params: {
+                       resourceInstanceId: reportMetadata().resourceinstanceid,
+                   }
+               }"></div>
+           </div>
         </div>
     </div>            
     {% endblock body %}
