--- a/afs/templates/views/components/reports/scenes/default.htm
+++ b/afs/templates/views/components/reports/scenes/default.htm
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="afs-report-section" data-bind="foreach: {data: data().sections, as: section, noChildContext: true}">
-    <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible[section.title])}" class="fa fa-angle-double-right toggle"></i> <span data-bind="text: section.title"></span></h2>
+    <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible[section.title])}, css: {'fa-angle-double-right': visible[section.title](), 'fa-angle-double-up': !visible[section.title]()}" class="fa toggle"></i> <span data-bind="text: section.title"></span></h2>
     
     <!-- Collapsible content -->
     <div data-bind="visible: visible[section.title]" class="afs-report-collapsible-container pad-lft">
