--- a/afs/templates/views/components/reports/scenes/existence.htm
+++ b/afs/templates/views/components/reports/scenes/existence.htm
@@ -27,7 +27,7 @@
     <!-- ko if: !!eventData && eventData.tileid -->
     <div class="afs-report-subsection">
         <h2 class="afs-report-section-title">{% trans "Event Details" %}</h2>
-        <h3 style="display: block ;"><i data-bind="click: function() {toggleVisibility(eventData.visible)}" class="fa fa-angle-double-right toggle"></i> {% trans "Event: " %} <span></span></h3>
+        <h3 style="display: block ;"><i data-bind="click: function() {toggleVisibility(eventData.visible)}, css: {'fa-angle-double-right': eventData.visible(), 'fa-angle-double-up': !eventData.visible()}" class="fa toggle"></i> {% trans "Event: " %} <span></span></h3>
         <!-- <a class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit this Event" %}</a>-->
 
         <div class="afs-nodata-note afs-top-card" style="display: none;">No information for this event</div>
@@ -182,7 +182,7 @@
                 </div>
                 <!-- /ko -->
             </div>
-
+            <!-- ko if: eventData.timespan -->
             <!-- Event First Generation Cards -->
             <div class="afs-report-subsection-firstchild">
                 <h5>Event Timespan</h5>
@@ -232,6 +232,7 @@
                     </div>
                 </div>
             </div>
+            <!--/ko-->
         </div>
     </div>
     <div data-bind="if: eventData.parts && eventData.parts().length" class="afs-report-subsection">
