--- a/afs/templates/views/components/reports/place.htm
+++ b/afs/templates/views/components/reports/place.htm
@@ -2,65 +2,94 @@
 {% load i18n %}
 
 {% block report %}
-    {% block report_title_bar %}
-    <!-- Custom Template Report Title Bar -->
-    <div class="relative">
+{% block report_title_bar %}
+<!-- Custom Template Report Title Bar -->
+<div class="relative">
 
-        <!-- Title Block -->
-        <div class="afs-report-toolbar">
-            <h1 class="afs-report-toolbar-title"><span class="afs-report-name">{% trans "Place" %}:</span><span data-bind="text: displayname" class="afs-report-instance-name"></span></h1>
-        </div>
-
+    <!-- Title Block -->
+    <div class="afs-report-toolbar">
+        <h1 class="afs-report-toolbar-title"><span class="afs-report-name">{% trans "Place" %}:</span><span data-bind="text: displayname" class="afs-report-instance-name"></span></h1>
     </div>
-    {% endblock report_title_bar %}
 
+</div>
+{% endblock report_title_bar %}
+
+
+{% block body %}
+<!-- Link nav -->
+<div class="afs-report-anchor-container">
+    <ol class="afs-report-anchors breadcrumb">
+        <!-- ko foreach: {data: sections, as: 'section'} -->
+        <li data-bind="click: function(){$parent.activeSection(section.id)}, css: {active: $parent.activeSection() === section.id}, text: section.title" class="afs-report-a"></li>
+        <!-- /ko -->
+    </ol>
+</div>
+<div class="afs-tabbed-report">
+    <div class="afs-tabbed-report-content">
+        <!-- Names Tab -->
+        <div class="afs-report-page" data-bind="if: activeSection() === 'name'">
+            <div data-bind="component: {
+                name: 'views/components/reports/scenes/name',
+                params: {
+                    data: resource,
+                    cards: nameCards,
+                    dataConfig: nameDataConfig
+                }
+            }"></div>
+        </div>
+        <!-- Description Tab -->
+        <div class="afs-report-page" data-bind="if: activeSection() === 'description'">
+            <div data-bind="component: {
+                name: 'views/components/reports/scenes/description',
+                params: {
+                    data: resource,
+                    cards: descriptionCards,
+                }
+            }"></div>
+        </div>
+        <!-- Documentation Tab -->
+        <div class="afs-report-page" data-bind="if: activeSection() === 'documentation'">
+            <div data-bind="component: {
+                name: 'views/components/reports/scenes/documentation',
+                params: {
+                    data: resource,
+                    cards: documentationCards,
+                    dataConfig: documentationDataConfig,
+                }
+            }"></div>
+        </div>
+        <!-- Parthood Tab --> 
+        <div class="afs-report-page" data-bind="if: activeSection() === 'parthood'">
+            <div data-bind="component: {
+                name: 'views/components/reports/scenes/default',
+                params: {
+                    data: parthoodData,
+                }
+            }"></div>
+        </div>
+        <!-- Location Tab --> 
+        <div class="afs-report-page" data-bind="if: activeSection() === 'location'">
+            <div data-bind="component: {
+                name: 'views/components/reports/scenes/location',
+                params: {
+                    geojson: geojson,
+                    resourceInstanceId: reportMetadata().resourceinstanceid,
+                }
+            }"></div>
+        </div>   
+         <!-- JSON Tab -->
+        <div class="afs-report-page" data-bind="if: activeSection() === 'json'">
+            <div data-bind="component: {
+                name: 'views/components/reports/scenes/json',
+                params: {
+                    resourceInstanceId: reportMetadata().resourceinstanceid,
+                }
+            }"></div>
+        </div>
+    </div>
+</div>
+{% endblock body %}
     
-    {% block body %}
-    <!-- Link nav -->
-    <div class="afs-report-anchor-container">
-        <ol class="afs-report-anchors breadcrumb">
-            <!-- ko foreach: {data: sections, as: 'section'} -->
-            <li data-bind="click: function(){$parent.activeSection(section.id)}, css: {active: $parent.activeSection() === section.id}, text: section.title" class="afs-report-a"></li>
-            <!-- /ko -->
-        </ol>
-    </div>
-    <div class="afs-tabbed-report">
-        <div class="afs-tabbed-report-content">
-            <!-- Names Tab -->
-            <div class="afs-report-page" data-bind="if: activeSection() === 'name'">
-                <div data-bind="component: {
-                    name: 'views/components/reports/scenes/name',
-                    params: {
-                        data: resource,
-                        cards: nameCards,
-                        dataConfig: nameDataConfig
-                    }
-                }"></div>
-            </div>
-            <!-- Description Tab -->
-            <div class="afs-report-page" data-bind="if: activeSection() === 'description'">
-                <div data-bind="component: {
-                    name: 'views/components/reports/scenes/description',
-                    params: {
-                        data: resource,
-                        cards: descriptionCards,
-                    }
-                }"></div>
-            </div>
-            <!-- Documentation Tab -->
-            <div class="afs-report-page" data-bind="if: activeSection() === 'documentation'">
-                <div data-bind="component: {
-                    name: 'views/components/reports/scenes/documentation',
-                    params: {
-                        data: resource,
-                        cards: documentationCards,
-                        dataConfig: documentationDataConfig,
-                    }
-                }"></div>
-            </div>            
-        </div>
-    </div>            
-    {% endblock body %}
 {% endblock report %}
 
 {% block summary %}
