person/place changes

--- a/afs/templates/views/components/reports/place.htm
+++ b/afs/templates/views/components/reports/place.htm
@@ -74,6 +74,7 @@
                 params: {
                     geojson: geojson,
                     resourceInstanceId: reportMetadata().resourceinstanceid,
+                    locationCards: locationCards,
                 }
             }"></div>
         </div>   
