--- a/afs/templates/views/components/reports/modification.htm
+++ b/afs/templates/views/components/reports/modification.htm
@@ -94,6 +94,17 @@
                     }
                 }"></div>
             </div>
+            <!-- Substance Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'substance'">
+                <div data-bind="component: {
+                    name: 'views/components/reports/scenes/substance',
+                    params: {
+                        data: resource,
+                        cards: substanceCards,
+                        dataConfig: substanceDataConfig
+                    }
+                }"></div>
+            </div>
             <!-- JSON Tab -->
             <div class="afs-report-page" data-bind="if: activeSection() === 'json'">
                 <div data-bind="component: {
