--- a/afs/templates/views/components/reports/textual-work.htm
+++ b/afs/templates/views/components/reports/textual-work.htm
@@ -109,7 +109,16 @@
                         data: parthoodData,
                     }
                 }"></div>
-            </div>
+            </div>          
+            <!-- JSON Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'json'">
+               <div data-bind="component: {
+                   name: 'views/components/reports/scenes/json',
+                   params: {
+                       resourceInstanceId: reportMetadata().resourceinstanceid,
+                   }
+               }"></div>
+           </div>
         </div>
     </div>
 
