more existence tweaks, various stylistic changes

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -208,7 +208,7 @@ i.toggle:hover {
     display: inline-block;
 }
 
-.afs-report-section > h2 {
+.afs-report-section > div > h2 {
     text-transform: capitalize;
 }
 
