--- a/afs/templates/views/components/reports/group.htm
+++ b/afs/templates/views/components/reports/group.htm
@@ -121,7 +121,8 @@
                 <div data-bind="component: {
                     name: 'views/components/reports/scenes/communication',
                     params: {
-                        data: resource
+                        data: resource,
+                        cards: communicationCards
                     }
                 }"></div>
             </div>
