--- a/afs/templates/views/components/reports/scenes/communication.htm
+++ b/afs/templates/views/components/reports/scenes/communication.htm
@@ -5,8 +5,8 @@
 {% block body %}
 <div class="afs-report-section">
     <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.contactPoints)}, css: {'fa-angle-double-right': visible.contactPoints(), 'fa-angle-double-up': !visible.contactPoints()}" class="fa toggle"></i> {% trans "Contact Points" %}</h2>
-    <span data-bind="if: cards && cards['contact information for person'] && (!contactPoints().length || cards['contact information for person'].cardinality == 'n')">
-        <a class="afs-report-a" data-bind="click: function(){addNewTile(cards['contact information for person'])}"><i class="fa fa-mail-reply"></i> {% trans "Add Contact Point" %}</a>
+    <span data-bind="if: cards && cards.contactPoints && (!Array.isArray(contactPoints())|| cards.contactPoints.cardinality == 'n')">
+        <a class="afs-report-a" data-bind="click: function(){addNewTile(cards.contactPoints)}"><i class="fa fa-mail-reply"></i> {% trans "Add Contact Point" %}</a>
     </span>
 
     <!-- Collapsible content -->
@@ -33,11 +33,11 @@
                                 <td data-bind="text: content"></td>
                                 <td data-bind="text: type"></td>
                                 <td class="afs-table-control">
-                                    <div data-bind="if: $parent.cards && $parent.cards['contact information for person']">
-                                        <a data-bind="click: function() {$parent.editTile(tileid, $parent.cards['contact information for person'])}">
+                                    <div data-bind="if: $parent.cards && $parent.cards.contactPoints">
+                                        <a data-bind="click: function() {$parent.editTile(tileid, $parent.cards.contactPoints)}">
                                             <i class="fa fa-mail-reply"></i>
                                         </a>
-                                        <a data-bind="click: function() {$parent.deleteTile(tileid, $parent.cards['contact information for person'])}">
+                                        <a data-bind="click: function() {$parent.deleteTile(tileid, $parent.cards.contactPoints)}">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
