--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -128,8 +128,58 @@
                         <!-- /ko -->
                         
                         <!-- ko if: Array.isArray(annotation.info) -->
-                        <div data-bind="with: annotation, as: 'annotation'">
-                        <div data-bind="component: { name: 'views/components/reports/scenes/annotation-parts', params: {annotation: annotation}}"></div>
+                        <div data-bind="with: annotation, as: 'annotation', noChildContext: true">
+                        <div data-bind="component: { name: 'views/components/reports/scenes/annotation-parts', params: {annotation: annotation, selectedAnnotationTileId: selectedAnnotationTileId}}"></div>
+                        </div>
+                        <div class="afs-table pad-btm">
+                            <table class="table table-striped" cellspacing="0" width="100%">
+                                <thead>
+                                    <tr class="afs-table-header">
+                                        <th>{% trans "Region Name" %}</th>
+                                        <th>{% trans "Part of Object" %}</th>
+                                        <th class="min-tabletl">{% trans "Annotator" %}</th>
+                                        <th class="none">{% trans "Assigned Property Type" %}</th>
+                                        <th class="none">{% trans "Geometric Annotation Identifier" %}</th>
+                                        <th class="afs-table-control all"></th>
+                                    </tr>
+                                </thead>
+                                <tbody data-bind="dataTablesForEach: { data: annotation.info, as: 'part', dataTableOptions: annotationTableConfig }">
+                                    <tr>
+                                        <td>
+                                            <div data-bind="text: part.label"></div>
+                                        </td>
+                                        <td>
+                                            <a data-bind="text: $parent.getNodeValue(part.physicalPartOfObject), attr: {href: $parent.getResourceLink(part.physicalPartOfObject)}"></a>
+                                        </td>
+                                        <td>
+                                            <a data-bind="text: $parent.getNodeValue(part.annotator), attr: {href: $parent.getResourceLink(part.annotator)}"></a>
+                                        </td>
+                                        <td data-bind="text: part.assignedPropertyType"></td>
+                                        <td data-bind="text: part.geometricAnnotationIdentifier"></td>
+                                        <td style="width: 110px;" class="afs-table-control">
+                                            <div">
+                                            <div style="display:inline" data-bind="if: $parent.annotation.card && $parent.annotation.card">
+                                                <a style="display:inline" data-bind="click: function() {$parent.editTile(part.tileId, $parent.annotation.card)}">
+                                                    <i style="display:inline" class="fa fa-mail-reply"></i>
+                                                </a>
+                                                <a style="display:inline" data-bind="click: function() {$parent.deleteTile(part.tileId, $parent.annotation.card)}">
+                                                    <i style="display:inline" class="fa fa-trash"></i>
+                                                </a>
+                                            </div>
+                                            <a style="display:inline" data-bind="click: function(){$parent.selectedAnnotationTileId(part.tileId)}">
+                                                <i class="fa fa-globe"></i>
+                                            </a>
+                                            <i style="display:inline" data-bind="visible: $parent.selectedAnnotationTileId() === part.tileId" class="fa fa-arrow-left"></i>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="final-step-section-block-item">
+                            <div class="block-item files-metadata">
+                                <div class="summary-value" data-bind='text: "{% trans 'Regions of Interest: ' %}" + annotation.info.length'></div>
+                            </div>
                         </div>
                         <!-- /ko -->
                     </div>
