fix for the issue with 100% height

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -242,6 +242,16 @@ i.toggle:hover {
     width: 100%;
 }
 
+.afs-codemirror div .CodeMirror{
+    height: 100%
+}
+
+.afs-flex-col{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
 .afs-codemirror {
     display: flex;
     position: relative;
