--- a/afs/templates/views/components/reports/sampling-activity.htm
+++ b/afs/templates/views/components/reports/sampling-activity.htm
@@ -143,7 +143,7 @@
                                                     <i style="display:inline" class="fa fa-trash"></i>
                                                 </a>
                                             </div>
-                                            <a style="display:inline" data-bind="click: function(){$parent.highlightAnnotation(part.tileId)}">
+                                            <a style="display:inline" data-bind="click: function(){$parent.selectedAnnotationTileId(part.tileId)}">
                                                 <i class="fa fa-globe"></i>
                                             </a>
                                             <i style="display:inline" data-bind="visible: $parent.selectedAnnotationTileId() === part.tileId" class="fa fa-arrow-left"></i>
