--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Sampling Activity' %}</h5>
+        <h5 class="summary-value" style="margin-bottom: 10px;">{% trans 'Sampling Activity' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Sampling Activity' %}</h5>
+        <h5 class="summary-value">{% trans 'Sampling Locations' %}</h5>
         <!-- ko foreach: sampleAnnotations -->
         <div style="display: inline-flex; flex-direction: column;">
             <div style="border: solid 1px #ddd">
