--- a/afs/templates/views/components/workflows/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/select-phys-thing-step.htm
@@ -15,7 +15,7 @@
         }"></div>
     </div>
     <!--ko if: termFilter() -->
-    <div style="padding: 5px">
+    <div style="padding: 5px; margin-top: 15px;">
         <div class="widget-input-label">Analyzed Object or Sample</div>
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
