--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -346,7 +346,7 @@
                         <!-- BEGIN sample description -->
                             <h5 class="analysis-areas-annotation-step-widget-title">{% trans 'Sample Description' %}</h5>
 
-                            <div style="margin-left: -21px; margin-top: -18px;"
+                            <div class="afs-workflow-sample-desc" style="margin-left: -21px; margin-top: -18px;"
                                 data-bind='
                                     component: {
                                         name: "rich-text-widget",
@@ -363,7 +363,7 @@
                         <!-- BEGIN motivation for sampling -->
                             <h5 class="analysis-areas-annotation-step-widget-title">{% trans 'Motivation for Sampling' %}</h5>
 
-                            <div 
+                            <div class="afs-workflow-sample-desc" style="margin-left: -21px; margin-top: -18px;"
                                 data-bind='
                                     component: {
                                         name: "rich-text-widget",
